--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
-    "uglifyjs-webpack-plugin": "^2.0.1"
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
     "@babel/core": "^7.6.4"
