--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "animate.css": "^3.7.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
